Changed git user